src/es/uniovi/dlp/parser/PmmParser.java
// Generated from /Users/danielonisfabian/Desktop/DLP/Pmm/ws/Pmm-UO293946/src/es/uniovi/dlp/parser/Pmm.g4 by ANTLR 4.13.2
package es.uniovi.dlp.parser;

    import es.uniovi.dlp.ast.*;
    import es.uniovi.dlp.ast.types.*;
    import es.uniovi.dlp.ast.expressions.*;
    import es.uniovi.dlp.ast.statements.*;
    import es.uniovi.dlp.ast.definitions.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, SINGLE_LINE_COMMENT=40, MULTIPLE_LINE_COMMENT=41, IDENTIFIER=42, 
		INT_CONSTANT=43, CHAR_CONSTANT=44, REAL_CONSTANT=45, WS=46;
	public static final int
		RULE_program = 0, RULE_definition = 1, RULE_main_definition = 2, RULE_var_definition = 3, 
		RULE_func_definition = 4, RULE_params = 5, RULE_func_body = 6, RULE_expression = 7, 
		RULE_statement = 8, RULE_block = 9, RULE_func_invocation = 10, RULE_type = 11, 
		RULE_built_in = 12, RULE_struct_field = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definition", "main_definition", "var_definition", "func_definition", 
			"params", "func_body", "expression", "statement", "block", "func_invocation", 
			"type", "built_in", "struct_field"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'main'", "'('", "')'", "'->'", "'None'", "':'", "'{'", 
			"'}'", "','", "';'", "'.'", "'['", "']'", "'-'", "'!'", "'*'", "'/'", 
			"'%'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", "'=='", "'&&'", "'||'", 
			"'print'", "'input'", "'return'", "'while'", "'if'", "'else:'", "'='", 
			"'struct'", "'int'", "'double'", "'char'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "SINGLE_LINE_COMMENT", "MULTIPLE_LINE_COMMENT", 
			"IDENTIFIER", "INT_CONSTANT", "CHAR_CONSTANT", "REAL_CONSTANT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> definitions = new ArrayList<>();
		public DefinitionContext d;
		public Main_definitionContext m;
		public TerminalNode EOF() { return getToken(PmmParser.EOF, 0); }
		public Main_definitionContext main_definition() {
			return getRuleContext(Main_definitionContext.class,0);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(28);
					((ProgramContext)_localctx).d = definition();
					 _localctx.definitions.addAll(((ProgramContext)_localctx).d.ast); 
					}
					} 
				}
				setState(35);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(36);
			((ProgramContext)_localctx).m = main_definition();
			 _localctx.definitions.add(((ProgramContext)_localctx).m.ast); 
			setState(38);
			match(EOF);
			 ((ProgramContext)_localctx).ast =  new Program(_localctx.definitions); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<>();
		public Var_definitionContext v;
		public Func_definitionContext f;
		public Var_definitionContext var_definition() {
			return getRuleContext(Var_definitionContext.class,0);
		}
		public Func_definitionContext func_definition() {
			return getRuleContext(Func_definitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitDefinition(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(47);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				((DefinitionContext)_localctx).v = var_definition();
				 _localctx.ast.addAll(((DefinitionContext)_localctx).v.ast); 
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				((DefinitionContext)_localctx).f = func_definition();
				 _localctx.ast.add(((DefinitionContext)_localctx).f.ast); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Main_definitionContext extends ParserRuleContext {
		public Definition ast;
		public Token ID;
		public Func_bodyContext f;
		public Func_bodyContext func_body() {
			return getRuleContext(Func_bodyContext.class,0);
		}
		public Main_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterMain_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitMain_definition(this);
		}
	}

	public final Main_definitionContext main_definition() throws RecognitionException {
		Main_definitionContext _localctx = new Main_definitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_main_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(T__0);
			setState(50);
			((Main_definitionContext)_localctx).ID = match(T__1);
			setState(51);
			match(T__2);
			setState(52);
			match(T__3);
			setState(53);
			match(T__4);
			setState(54);
			match(T__5);
			setState(55);
			match(T__6);
			setState(56);
			match(T__7);
			setState(57);
			((Main_definitionContext)_localctx).f = func_body();
			setState(58);
			match(T__8);
			 ((Main_definitionContext)_localctx).ast =  new FuncDefinition(((Main_definitionContext)_localctx).ID.getLine(), ((Main_definitionContext)_localctx).ID.getCharPositionInLine()+1, "main", new FuncType(VoidType.getInstance(), new ArrayList<VarDefinition>()), ((Main_definitionContext)_localctx).f.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_definitionContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<>();
		public List<String> ids = new ArrayList<>();
		public List<Integer> cols = new ArrayList<>();
		public Token ID1;
		public Token ID2;
		public TypeContext t;
		public List<TerminalNode> IDENTIFIER() { return getTokens(PmmParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PmmParser.IDENTIFIER, i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Var_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterVar_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitVar_definition(this);
		}
	}

	public final Var_definitionContext var_definition() throws RecognitionException {
		Var_definitionContext _localctx = new Var_definitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			((Var_definitionContext)_localctx).ID1 = match(IDENTIFIER);
			 _localctx.ids.add((((Var_definitionContext)_localctx).ID1!=null?((Var_definitionContext)_localctx).ID1.getText():null)); _localctx.cols.add(((Var_definitionContext)_localctx).ID1.getCharPositionInLine()+1); 
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9) {
				{
				{
				setState(63);
				match(T__9);
				setState(64);
				((Var_definitionContext)_localctx).ID2 = match(IDENTIFIER);
				 _localctx.ids.add((((Var_definitionContext)_localctx).ID2!=null?((Var_definitionContext)_localctx).ID2.getText():null)); _localctx.cols.add(((Var_definitionContext)_localctx).ID2.getCharPositionInLine()+1); 
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(T__6);
			setState(72);
			((Var_definitionContext)_localctx).t = type();
			setState(73);
			match(T__10);

			            int counter = 0;
			            for(String id : _localctx.ids){
			                int line = ((Var_definitionContext)_localctx).ID1.getLine();
			                int column = _localctx.cols.get(counter);
			                VarDefinition v = new VarDefinition(line, column, id, ((Var_definitionContext)_localctx).t.ast);
			                if(_localctx.ast.contains(v)) new ErrorType("Cannot have variable '" + id + "' duplicated: (line: " + line + ", column: " + column + ")", v);
			                _localctx.ast.add(v);
			                counter++;
			            }
			         
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_definitionContext extends ParserRuleContext {
		public Definition ast;
		public List<VarDefinition> parameters = new ArrayList<>();
		public Type returnType;
		public Token ID;
		public ParamsContext p;
		public Built_inContext b;
		public Token n;
		public Func_bodyContext f;
		public TerminalNode IDENTIFIER() { return getToken(PmmParser.IDENTIFIER, 0); }
		public Func_bodyContext func_body() {
			return getRuleContext(Func_bodyContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public Built_inContext built_in() {
			return getRuleContext(Built_inContext.class,0);
		}
		public Func_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterFunc_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitFunc_definition(this);
		}
	}

	public final Func_definitionContext func_definition() throws RecognitionException {
		Func_definitionContext _localctx = new Func_definitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_func_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__0);
			setState(77);
			((Func_definitionContext)_localctx).ID = match(IDENTIFIER);
			setState(78);
			match(T__2);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(79);
				((Func_definitionContext)_localctx).p = params();
				 ((Func_definitionContext)_localctx).parameters =  ((Func_definitionContext)_localctx).p.ast; 
				}
			}

			setState(84);
			match(T__3);
			setState(85);
			match(T__4);
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__36:
			case T__37:
			case T__38:
				{
				{
				setState(86);
				((Func_definitionContext)_localctx).b = built_in();
				}
				 ((Func_definitionContext)_localctx).returnType =  ((Func_definitionContext)_localctx).b.ast; 
				}
				break;
			case T__5:
				{
				setState(89);
				((Func_definitionContext)_localctx).n = match(T__5);
				 ((Func_definitionContext)_localctx).returnType =  VoidType.getInstance(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(93);
			match(T__6);
			setState(94);
			match(T__7);
			setState(95);
			((Func_definitionContext)_localctx).f = func_body();
			setState(96);
			match(T__8);
			 ((Func_definitionContext)_localctx).ast =  new FuncDefinition(((Func_definitionContext)_localctx).ID.getLine(), ((Func_definitionContext)_localctx).ID.getCharPositionInLine()+1, (((Func_definitionContext)_localctx).ID!=null?((Func_definitionContext)_localctx).ID.getText():null), new FuncType(_localctx.returnType, _localctx.parameters), ((Func_definitionContext)_localctx).f.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public List<VarDefinition> ast = new ArrayList<>();
		public Token ID1;
		public Built_inContext t1;
		public Token ID2;
		public Built_inContext t2;
		public List<TerminalNode> IDENTIFIER() { return getTokens(PmmParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PmmParser.IDENTIFIER, i);
		}
		public List<Built_inContext> built_in() {
			return getRuleContexts(Built_inContext.class);
		}
		public Built_inContext built_in(int i) {
			return getRuleContext(Built_inContext.class,i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitParams(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			((ParamsContext)_localctx).ID1 = match(IDENTIFIER);
			setState(100);
			match(T__6);
			setState(101);
			((ParamsContext)_localctx).t1 = built_in();
			 _localctx.ast.add(new VarDefinition(((ParamsContext)_localctx).ID1.getLine(), ((ParamsContext)_localctx).ID1.getCharPositionInLine()+1, (((ParamsContext)_localctx).ID1!=null?((ParamsContext)_localctx).ID1.getText():null), ((ParamsContext)_localctx).t1.ast)); 
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9) {
				{
				{
				setState(103);
				match(T__9);
				setState(104);
				((ParamsContext)_localctx).ID2 = match(IDENTIFIER);
				setState(105);
				match(T__6);
				setState(106);
				((ParamsContext)_localctx).t2 = built_in();
				 _localctx.ast.add(new VarDefinition(((ParamsContext)_localctx).ID2.getLine(), ((ParamsContext)_localctx).ID2.getCharPositionInLine()+1, (((ParamsContext)_localctx).ID2!=null?((ParamsContext)_localctx).ID2.getText():null), ((ParamsContext)_localctx).t2.ast)); 
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_bodyContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<>();
		public Var_definitionContext v;
		public StatementContext s;
		public List<Var_definitionContext> var_definition() {
			return getRuleContexts(Var_definitionContext.class);
		}
		public Var_definitionContext var_definition(int i) {
			return getRuleContext(Var_definitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Func_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).enterFunc_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PmmListener ) ((PmmListener)listener).exitFunc_body(this);
		}
	}

	public final Func_bodyContext func_body() throws RecognitionException {
		Func_bodyContext _localctx = new Func_bodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_func_body);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(114);
					((Func_bodyContext)_localctx).v = var_definition();
					 _localctx.ast.addAll(((Func_bodyContext)_localctx).v.ast); 
					}
					} 
				}
				setState(121);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 65987340763144L) != 0)) {
				{
				{
				setState(122);
				((Func_bodyContext)_localctx).s = statement();
				 _localctx.ast.add(((Func_bodyContext)_localctx).s.ast); 
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
